--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,11 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="fontColour">#F1A734</color>
+    <color name="fontColour2">#ffffff</color>
     <color name="selectColour">#F1A734</color>
+    <color name="selectColour2">#ffffff</color>
     <color name="bkgndColour">#28aac0</color>
     <color name="black">#000000</color>
-    <color name="white">#FFFFFF</color>
+    <color name="white">#ffffff</color>
 
 </resources>
